--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.6",
+    "formik": "^2.2.9",
     "immutability-helper": "^3.1.1",
     "react": "^16.8.6",
     "react-bootstrap": "^0.33.1",
     "react-dom": "^16.8.6",
+    "react-icons": "^4.4.0",
+    "react-redux": "^8.0.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
